2ºSemestre/LFA/Projeto/geometrics-lfa-07-master/examples/geometrics_tests/semantic_errors/semantic_error_line2.geom
geometrics: main

/* Should fail -> missing ',' at '0' */
line l8 (2, 0) (2 0) 